@@ -10,7 +10,7 @@ Version 8.41
 1.  Fixed typo in CMakeLists.txt (wrong number of arguments for 
 PCRE_STATIC_RUNTIME (affects MSVC only).
 
-2. Issue 1 for 8.40 below was not correctly fixed. If pcregrep in multiline 
+2.  Issue 1 for 8.40 below was not correctly fixed. If pcregrep in multiline 
 mode with --only-matching matched several lines, it restarted scanning at the 
 next line instead of moving on to the end of the matched string, which can be 
 several lines after the start.
@@ -29,6 +29,10 @@ are fixed:
 
     (a) Check for values < 256 when calling isprint() in pcretest.
     (b) Give an error for too big a number after \O. 
+    
+7.  In the 32-bit library in non-UTF mode, an attempt to find a Unicode 
+property for a character with a code point greater than 0x10ffff (the Unicode 
+maximum) caused a crash.
 
 
 Version 8.40 11-January-2017
